# gol-cpp

./: CMakeLists.txt  LICENSE  README.md  board.cpp  board.h
examples/: CMakeLists.txt  sim.cpp
include/: board.h  cell.h  random.h
src/: CMakeLists.txt  board.cpp  cell.cpp
src/tests/: CMakeLists.txt  test_board.cpp  test_cell.cpp
